# cogstack-nlp

./: CLAUDE.md  CLINICIAN_GUIDE.md  COGSTACK_ECOSYSTEM_ANALYSIS.md  CONTEXT.md  IT_DEPLOYMENT_GUIDE.md  NEXT_STEPS.md  QUICK_START.md  README.md
.claude/skills/: README.md
.git-hooks/: README.md  commit-msg  pre-commit  prepare-commit-msg
.github/workflows/: cogstack-es_main.yml  cogstack-es_release.yml  medcat-den_main.yml  medcat-scripts_main.yml  medcat-service_docker.yml  medcat-trainer_ci.yml  medcat-trainer_qa.yml  medcat-v1_main.yml  medcat-v2-lib-stability.yml  medcat-v2_release.yml
.specify/: README.md
.specify/constitution/: project-constitution.md
.specify/plans/: clinical-care-tools-base-plan.md
.specify/specifications/: ANALYSIS_SUMMARY.md  clinical-care-tools-base-app.md  meta-annotations-ui.md
.specify/tasks/: clinical-care-tools-base-tasks.md
cogstack-es/: ReadMe.md  pyproject.toml  search_template.ipynb
cogstack-es/src/cogstack/: __init__.py  cogstack.py  es.py  os.py  read_creds.py
cogstack-es/tests/: test_cogstack.py  test_search_template_nb.py
cogstack-es/tests/.e2e/: run_es8_locally.sh  run_es9_locally.sh  run_os_locally.sh  test_locally.py
docs/: DEVELOPMENT.md  ENHANCEMENT_ANALYSIS.md  PROJECT_PLAN.md  WORKFLOW_FRAMEWORKS_GUIDE.md  agents.md
docs/advanced/: meta-annotations-guide.md
docs/compliance/: healthcare-compliance-framework.md
medcat-scripts/: README.md  mypy.ini  requirements-dev.txt  requirements.txt
medcat-service/: README.md  requirements.txt  start_service_production.sh
medcat-trainer/: docker-compose-prod.yml  docker-compose.yml
medcat-v2/: pyproject.toml
medcat-v2-tutorials/: requirements.txt
scripts/: install-git-hooks.sh
(+43 files in other folders)
